--- a/app/src/main/res/layout/place_row_screen.xml
+++ b/app/src/main/res/layout/place_row_screen.xml
@@ -3,12 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/singleMovieView"
+    android:id="@+id/singlePlaceView"
     android:layout_width="match_parent"
     android:layout_height="100dp">
 
     <ImageView
-        android:id="@+id/singleMoviePic"
+        android:id="@+id/singlePlacePic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,7 +19,7 @@
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/singleMovieTitle"
+        android:id="@+id/singlePlaceTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -30,11 +30,11 @@
         android:text="Title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.022"
-        app:layout_constraintStart_toEndOf="@+id/singleMoviePic"
+        app:layout_constraintStart_toEndOf="@+id/singlePlacePic"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/singleMovieContext"
+        android:id="@+id/singlePlaceContext"
         android:layout_width="287dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
@@ -46,6 +46,6 @@
         android:text="Context"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/singleMoviePic"
-        app:layout_constraintTop_toBottomOf="@+id/singleMovieTitle" />
+        app:layout_constraintStart_toEndOf="@+id/singlePlacePic"
+        app:layout_constraintTop_toBottomOf="@+id/singlePlaceTitle" />
 </android.support.constraint.ConstraintLayout>
