--- a/app/src/main/res/layout/fragment_bar.xml
+++ b/app/src/main/res/layout/fragment_bar.xml
@@ -4,11 +4,15 @@
     android:layout_height="match_parent">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Bar"
-        android:layout_centerInParent="true"
-        android:textSize="30sp" />
-
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Bar"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:textSize="30sp" />-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/AliceBlue"/>
 </RelativeLayout>
