--- a/app/src/main/res/layout/fragment_bar.xml
+++ b/app/src/main/res/layout/fragment_bar.xml
@@ -1,7 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/bottom"
     android:layout_height="match_parent">
+
 
     <!-- TODO: Update blank fragment layout -->
     <!--<TextView-->
@@ -13,6 +15,5 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/AliceBlue"/>
+        android:layout_height="match_parent"/>
 </RelativeLayout>
