--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
+    android:background="@color/bottom"
     android:layout_height="match_parent">
 
     <android.support.design.widget.BottomNavigationView
@@ -11,9 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemBackground="@color/colorPrimary"
+        app:itemBackground="@color/bottom"
         app:itemIconTint="@color/DarkSalmon"
         app:itemTextColor="@color/AliceBlue"
+        android:layout_weight="1.5"
+        android:paddingTop="16dp"
         app:menu="@menu/navigation_main" />
 
     <android.support.v4.view.ViewPager
