--- a/app/src/main/res/layout/place_row_screen.xml
+++ b/app/src/main/res/layout/place_row_screen.xml
@@ -21,18 +21,12 @@
 
     <TextView
         android:id="@+id/singlePlaceTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:text="Title"
         android:textColor="@color/White"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.022"
-        app:layout_constraintStart_toEndOf="@+id/singlePlacePic"
+        app:layout_constraintStart_toStartOf="@+id/singlePlaceContext"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -42,11 +36,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:text="Context"
         android:textColor="@color/Gray"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/singlePlacePic"
         app:layout_constraintTop_toBottomOf="@+id/singlePlaceTitle" />
 
