--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,7 +82,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
             android:layout_marginRight="24dp"
-            android:text="TextView"
+            android:text=""
             android:textColor="@color/lightBlue"
             app:layout_constraintEnd_toEndOf="@+id/simpleSeekBar"
             app:layout_constraintTop_toBottomOf="@+id/simpleSeekBar" />
