--- a/app/src/main/res/layout/view_contacts_dialogue.xml
+++ b/app/src/main/res/layout/view_contacts_dialogue.xml
@@ -14,5 +14,17 @@ tools:context=".FindContactsActivity">
     android:layout_height="fill_parent" >
 </ListView>
 
+    <Button
+
+        android:layout_width="219dp"
+        android:layout_height="67dp"
+        android:text="Invite"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+       />
+
 </android.support.constraint.ConstraintLayout>
 
