--- a/app/src/main/res/layout/view_contacts_dialogue.xml
+++ b/app/src/main/res/layout/view_contacts_dialogue.xml
@@ -15,7 +15,7 @@ tools:context=".FindContactsActivity">
 </ListView>
 
     <Button
-
+        android:id="@+id/inviteButtonClick"
         android:layout_width="219dp"
         android:layout_height="67dp"
         android:text="Invite"
