--- a/app/src/main/res/layout/view_contacts_dialogue.xml
+++ b/app/src/main/res/layout/view_contacts_dialogue.xml
@@ -18,7 +18,7 @@ tools:context=".FindContactsActivity">
         android:id="@+id/inviteButtonClick"
         android:layout_width="219dp"
         android:layout_height="67dp"
-        android:text="Invite"
+        android:text="Done"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
